--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@epic-web/client-hints": "^1.3.5",
+    "@epic-web/invariant": "^1.0.0",
     "@remix-run/node": "^2.16.0",
     "@remix-run/react": "^2.16.0",
     "@remix-run/serve": "^2.16.0",
+    "clsx": "^2.1.1",
     "isbot": "^4.1.0",
     "lucide-react": "^0.477.0",
     "motion": "^12.4.7",
